# MareaDeDatODS

./: .gitignore  README.md  pyproject.toml
dashboard/: ai-log.md  custom.scss  index.qmd  index.quarto_ipynb  index.quarto_ipynb_1  index.quarto_ipynb_11  index.quarto_ipynb_16  index.quarto_ipynb_17  index.quarto_ipynb_18  index.quarto_ipynb_2  index.quarto_ipynb_3  index.quarto_ipynb_4  index.quarto_ipynb_7  index.quarto_ipynb_9  propuesta_disenio_custom.scss  propuesta_disenio_index.qmd
dashboard/index_files/libs/bootstrap/: bootstrap-078593f782efe8493e683ec15f640a87.min.css  bootstrap-10f045308a2318d431f42ff1d189b9bf.min.css  bootstrap-2042b8d4ad2ba6007610e0426af75d26.min.css  (+32 more)
datos/: altura_significante_20260423.csv  altura_significante_20260424.csv  data-1_grados.csv  data-1_gradoscelsius.csv  data-1_metros.csv  data-1_metrosxsegundo.csv  data-1_porcentaje.csv  mar_de_fondo_marejada_20260424.csv  meteorologia_veracruz_2026-04-20.csv  meteorologia_veracruz_2026-04-24.csv
docs/site_libs/bootstrap/: bootstrap-2a442fa3fe68c2cbe3a35eaf4bf72da8.min.css  bootstrap-d1a411cd58305aee053e6f523ac2ab63.min.css  bootstrap-dark-0babdddbcca932e6d619561e5aa1b263.min.css  bootstrap-dark-f880f6d4fd96be2386b922d39851989c.min.css  bootstrap-dark-ff6e39d5e13b84b47931453da98d71dd.min.css
scripts/: 001_LecturaGraficaDatosSMN.ipynb  002_LecturaGraficaDatosCENAPRED.ipynb  004_Historia.ipynb  004_LecturaGraficaDatosICAyCC.ipynb  005_Historia.ipynb
scripts/.ipynb_checkpoints/: 002_LecturaGraficaDatosCENAPRED-checkpoint.ipynb  003_LecturaGraficaDatosINEGI-checkpoint.ipynb
