[project]
name = "mareadedatods"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipyleaflet>=0.20.0",
    "jupyter>=1.1.1",
    "notebook>=7.5.5",
    "numpy>=2.4.3",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
]
